@@ -1060,7 +1060,10 @@ tny_camel_store_account_get_folders_default (TnyFolderStore *self, TnyList *list
 
 			if (folder != NULL)
 			{
-				tny_list_prepend (list, G_OBJECT (folder));
+				gchar *name = tny_folder_get_name (TNY_FOLDER(folder));
+				/* TNY TODO: Temporary fix for empty root folders */
+				if (name && strlen(name) > 0)
+					tny_list_prepend (list, G_OBJECT (folder));
 				g_object_unref (G_OBJECT (folder));
 			}
 		}
