@@ -1,3 +1,7 @@
+2007-07-08  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
+
+	* Temporary empty root folder fix
+
 2007-07-06  Murray Cumming  <murrayc@murrayc.com>
 
 	* libtinymail/tny-enums.h:
